--- a/fe/src/utils/locales/ku/translation.json
+++ b/fe/src/utils/locales/ku/translation.json
@@ -70,7 +70,7 @@
   "data.digital_platforms.title": "Digital Solidarity Campaigns",
   "data.digital_platforms.subtitle": "You can find details of digital solidarity campaigns from the links below.",
   "data.services.title": "Services in Cities Outside the Disaster Area",
-  "data.emergency_areas.title": "{{city}}, {{county}} Nexşeya Kevneşopî ya Pêkhatî",
+  "data.emergency_areas.title": "{{city}}, {{county}} qadên kombûna awarte",
   "service.category": "Service Category",
   "service.specific": "Specific Service Type",
 
