feat: add category

--- a/fe/src/utils/locales/en/translation.json
+++ b/fe/src/utils/locales/en/translation.json
@@ -99,6 +99,7 @@
   "website": "Website",
   "source": "Source",
   "contact": "Contact",
+  "category": "Category",
 
   "TOC": "Table of Contents"
 }
