--- a/fe/src/utils/locales/tr/translation.json
+++ b/fe/src/utils/locales/tr/translation.json
@@ -98,6 +98,7 @@
   "website": "Websitesi",
   "source": "Kaynak",
   "contact": "İletişim",
+  "category": "Kategori",
 
   "TOC": "İçindekiler"
 }
