--- a/fe/src/utils/locales/ar/translation.json
+++ b/fe/src/utils/locales/ar/translation.json
@@ -99,6 +99,7 @@
   "website": "مَوْقِع إِلَكْتُرُونِيّ",
   "source": "مصدر",
   "contact": "تواصل",
+  "category": "الفئة",
 
   "TOC": "محتويات"
 }
