--- a/admin-panel-fe/src/util/locales/en/translation.json
+++ b/admin-panel-fe/src/util/locales/en/translation.json
@@ -22,18 +22,68 @@
   "column.text": "Text",
   "column.link": "Link",
   "column.phone_number": "Phone Number",
+  "column.required": "Required",
 
   "dashboard.assigned_to_me": "Assigned to Me",
 
   "data.data": "Data",
   "data.page_description": "You can view and edit data for each table in this page",
   "data.rows": "Rows",
+  "data.stage": "Stage",
   "data.tables": "Tables",
+  "data.only_assigned_to_me": "Only assigned to me",
+
+  "data.dialog.confirm.are_you_sure": "Are you sure",
+  "data.dialog.confirm.delete": "Do you want to delete this row?",
+  "data.dialog.confirm.move_back": "Do you want to move this row to the previous stage?",
+  "data.dialog.title.create": "Create Row",
+  "data.dialog.title.edit": "Edit Row",
+  "data.dialog.title.view": "View Row",
+  "data.dialog.toaster.created": "Successfully created row",
+  "data.dialog.toaster.updated": "Successfully updated row",
+  "data.dialog.back": "Back",
+  "data.dialog.cancel": "Cancel",
+  "data.dialog.confirm": "Confirm",
+  "data.dialog.copied": "Copied to clipboard",
+  "data.dialog.delete": "Delete",
+  "data.dialog.deleted": "Successfully deleted row",
+  "data.dialog.existing_row": "Existing Row",
+  "data.dialog.previous_stage": "Previous Stage",
+  "data.dialog.moved_to_previous_stage": "Successfully moved the row to previous stage",
+  "data.dialog.new_row": "New Row",
+  "data.dialog.next": "Next",
+  "data.dialog.save": "Save",
+  "data.dialog.required": "This field is required",
+
+  "data.table.action": "Action",
+  "data.table.assign_to_me": "Assign to me",
+  "data.table.assigned_to": "Assigned To",
+  "data.table.columns": "Columns",
+  "data.table.id": "ID",
+  "data.table.last_updated_at": "Last Updated At",
+  "data.table.last_updated_by": "Last Updated By",
+  "data.table.me": "Me",
+  "data.table.new_row": "New Row",
+  "data.table.stage": "Stage",
+  "data.table.stage.unknown": "Unknown",
+  "data.table.upload": "Upload Data",
+
+  "data.upload.cancel": "Cancel",
+  "data.upload.confirm": "Confirm",
+  "data.upload.confirm.cancel": "Cancel",
+  "data.upload.confirm.done": "Successfully uploaded {{rowCount}} rows",
+  "data.upload.confirm.confirm": "Confirm",
+  "data.upload.confirm.content": "You are about to upload bulk data for table {{table}}.",
+  "data.upload.confirm.title": "Confirm uploading CSV",
+  "data.upload.download_template": "Download CSV template",
+  "data.upload.title": "Upload Data",
+  "data.upload.upload": "Upload",
 
   "drawer.assignments": "Assignments",
   "drawer.home": "Home",
   "drawer.pipeline": "Pipeline",
   "drawer.tables": "Tables",
+  "drawer.data": "Data",
 
   "pipeline.new_stage": "New Stage",
   "pipeline.page_description": "You can view and edit pipeline stages in this page",
@@ -46,10 +96,12 @@
   "table.table_definitions": "Table Definitions",
   "table.name": "Name",
   "table.columns": "Columns",
+  "table.created": "Successfully created table definition",
   "table.last_updated_at": "Last Updated At",
   "table.last_updated_by": "Last Updated By",
   "table.new_table_definition": "New Table",
   "table.page_description": "You can view and edit table definitions in this page",
+  "table.updated": "Successfully updated table definition",
 
   "table_modal.title": "Modify Table Definition"
 }
