Add data localization

--- a/admin-panel-fe/src/util/locales/en/translation.json
+++ b/admin-panel-fe/src/util/locales/en/translation.json
@@ -5,9 +5,15 @@
   "edit": "Edit",
   "password": "Password",
   "save": "Save",
-  "title": "Afet Bilgi Admin Panel",
+  "title": "Rowless Admin Panel",
   "username": "Username",
   "view_more": "View more",
+
+  "action.ALL": "All actions",
+  "action.EDIT_ASSIGNMENTS": "Edit assignments",
+  "action.EDIT_LOCALES": "Edit locales",
+  "action.EDIT_USERS": "Edit users",
+  "action.TRANSLATE_ROWS": "Translate rows",
 
   "assignment.action": "Action",
   "assignment.assign": "Assign",
@@ -26,6 +32,7 @@
   "dashboard.assigned_to_me": "Assigned to Me",
 
   "data.data": "Data",
+  "data.locale": "Locale",
   "data.page_description": "You can view and edit data for each table in this page",
   "data.rows": "Rows",
   "data.stage": "Stage",
@@ -36,8 +43,8 @@
   "data.dialog.confirm.delete": "Do you want to delete this row?",
   "data.dialog.confirm.move_back": "Do you want to move this row to the previous stage?",
   "data.dialog.title.create": "Create Row",
-  "data.dialog.title.edit": "Edit Row",
-  "data.dialog.title.view": "View Row",
+  "data.dialog.title.edit": "Edit Row ({{locale}})",
+  "data.dialog.title.view": "View Row ({{locale}})",
   "data.dialog.toaster.created": "Successfully created row",
   "data.dialog.toaster.updated": "Successfully updated row",
   "data.dialog.back": "Back",
@@ -65,6 +72,7 @@
   "data.table.new_row": "New Row",
   "data.table.stage": "Stage",
   "data.table.stage.unknown": "Unknown",
+  "data.table.table": "Table",
   "data.table.upload": "Upload Data",
 
   "data.upload.cancel": "Cancel",
@@ -87,6 +95,238 @@
   "drawer.tables": "Tables",
   "drawer.data": "Data",
 
+  "locale.ar-SA": "Arabic - Saudi Arabia",
+  "locale.bg-BG": "Bulgarian",
+  "locale.ca-ES": "Catalan",
+  "locale.zh-TW": "Chinese - Taiwan",
+  "locale.cs-CZ": "Czech",
+  "locale.da-DK": "Danish",
+  "locale.de-DE": "German - Germany",
+  "locale.el-GR": "Greek",
+  "locale.en-US": "English - United States",
+  "locale.fi-FI": "Finnish",
+  "locale.fr-FR": "French - France",
+  "locale.he-IL": "Hebrew",
+  "locale.hu-HU": "Hungarian",
+  "locale.is-IS": "Icelandic",
+  "locale.it-IT": "Italian - Italy",
+  "locale.ja-JP": "Japanese",
+  "locale.ko-KR": "Korean",
+  "locale.nl-NL": "Dutch - Netherlands",
+  "locale.nb-NO": "Norwegian (Bokmål)",
+  "locale.pl-PL": "Polish",
+  "locale.pt-BR": "Portuguese - Brazil",
+  "locale.rm-CH": "Rhaeto-Romanic",
+  "locale.ro-RO": "Romanian",
+  "locale.ru-RU": "Russian",
+  "locale.hr-HR": "Croatian",
+  "locale.sk-SK": "Slovak",
+  "locale.sq-AL": "Albanian - Albania",
+  "locale.sv-SE": "Swedish",
+  "locale.th-TH": "Thai",
+  "locale.tr-TR": "Turkish",
+  "locale.ur-PK": "Urdu - Pakistan",
+  "locale.id-ID": "Indonesian",
+  "locale.uk-UA": "Ukrainian",
+  "locale.be-BY": "Belarusian",
+  "locale.sl-SI": "Slovenian",
+  "locale.et-EE": "Estonian",
+  "locale.lv-LV": "Latvian",
+  "locale.lt-LT": "Lithuanian",
+  "locale.tg-Cyrl-TJ": "Tajik",
+  "locale.fa-IR": "Persian",
+  "locale.vi-VN": "Vietnamese",
+  "locale.hy-AM": "Armenian - Armenia",
+  "locale.az-Latn-AZ": "Azeri (Latin)",
+  "locale.eu-ES": "Basque",
+  "locale.wen-DE": "Sorbian",
+  "locale.mk-MK": "F.Y.R.O. Macedonian",
+  "locale.st-ZA": "Sutu",
+  "locale.ts-ZA": "Tsonga",
+  "locale.tn-ZA": "Tswana",
+  "locale.ven-ZA": "Venda",
+  "locale.xh-ZA": "Xhosa",
+  "locale.zu-ZA": "Zulu",
+  "locale.af-ZA": "Afrikaans - South Africa",
+  "locale.ka-GE": "Georgian",
+  "locale.fo-FO": "Faroese",
+  "locale.hi-IN": "Hindi",
+  "locale.mt-MT": "Maltese",
+  "locale.se-NO": "Sami",
+  "locale.gd-GB": "Gaelic (Scotland)",
+  "locale.yi": "Yiddish",
+  "locale.ms-MY": "Malay - Malaysia",
+  "locale.kk-KZ": "Kazakh",
+  "locale.ky-KG": "Kyrgyz (Cyrillic)",
+  "locale.sw-KE": "Swahili",
+  "locale.tk-TM": "Turkmen",
+  "locale.uz-Latn-UZ": "Uzbek (Latin)",
+  "locale.tt-RU": "Tatar",
+  "locale.bn-IN": "Bengali (India)",
+  "locale.pa-IN": "Punjabi",
+  "locale.gu-IN": "Gujarati",
+  "locale.or-IN": "Oriya",
+  "locale.ta-IN": "Tamil",
+  "locale.te-IN": "Telugu",
+  "locale.kn-IN": "Kannada",
+  "locale.ml-IN": "Malayalam",
+  "locale.as-IN": "Assamese",
+  "locale.mr-IN": "Marathi",
+  "locale.sa-IN": "Sanskrit",
+  "locale.mn-MN": "Mongolian (Cyrillic)",
+  "locale.bo-CN": "Tibetan - People's Republic of China",
+  "locale.cy-GB": "Welsh",
+  "locale.km-KH": "Khmer",
+  "locale.lo-LA": "Lao",
+  "locale.my-MM": "Burmese",
+  "locale.gl-ES": "Galician",
+  "locale.kok-IN": "Konkani",
+  "locale.mni": "Manipuri",
+  "locale.sd-IN": "Sindhi - India",
+  "locale.syr-SY": "Syriac",
+  "locale.si-LK": "Sinhalese - Sri Lanka",
+  "locale.chr-US": "Cherokee - United States",
+  "locale.iu-Cans-CA": "Inuktitut",
+  "locale.am-ET": "Amharic - Ethiopia",
+  "locale.tmz": "Tamazight (Arabic)",
+  "locale.ks-Arab-IN": "Kashmiri (Arabic)",
+  "locale.ne-NP": "Nepali",
+  "locale.fy-NL": "Frisian - Netherlands",
+  "locale.ps-AF": "Pashto",
+  "locale.fil-PH": "Filipino",
+  "locale.dv-MV": "Divehi",
+  "locale.bin-NG": "Edo",
+  "locale.fuv-NG": "Fulfulde - Nigeria",
+  "locale.ha-Latn-NG": "Hausa - Nigeria",
+  "locale.ibb-NG": "Ibibio - Nigeria",
+  "locale.yo-NG": "Yoruba",
+  "locale.quz-BO": "Quecha - Bolivia",
+  "locale.nso-ZA": "Sepedi",
+  "locale.ig-NG": "Igbo - Nigeria",
+  "locale.kr-NG": "Kanuri - Nigeria",
+  "locale.gaz-ET": "Oromo",
+  "locale.ti-ER": "Tigrigna - Ethiopia",
+  "locale.gn-PY": "Guarani - Paraguay",
+  "locale.haw-US": "Hawaiian - United States",
+  "locale.la": "Latin",
+  "locale.so-SO": "Somali",
+  "locale.ii-CN": "Yi",
+  "locale.pap-AN": "Papiamentu",
+  "locale.ug-Arab-CN": "Uighur - China",
+  "locale.mi-NZ": "Maori - New Zealand",
+  "locale.ar-IQ": "Arabic - Iraq",
+  "locale.zh-CN": "Chinese - People's Republic of China",
+  "locale.de-CH": "German - Switzerland",
+  "locale.en-GB": "English - United Kingdom",
+  "locale.es-MX": "Spanish - Mexico",
+  "locale.fr-BE": "French - Belgium",
+  "locale.it-CH": "Italian - Switzerland",
+  "locale.nl-BE": "Dutch - Belgium",
+  "locale.nn-NO": "Norwegian (Nynorsk)",
+  "locale.pt-PT": "Portuguese - Portugal",
+  "locale.ro-MD": "Romanian - Moldava",
+  "locale.ru-MD": "Russian - Moldava",
+  "locale.sr-Latn-CS": "Serbian (Latin)",
+  "locale.sv-FI": "Swedish - Finland",
+  "locale.ur-IN": "Urdu - India",
+  "locale.az-Cyrl-AZ": "Azeri (Cyrillic)",
+  "locale.ga-IE": "Gaelic (Ireland)",
+  "locale.ms-BN": "Malay - Brunei Darussalam",
+  "locale.uz-Cyrl-UZ": "Uzbek (Cyrillic)",
+  "locale.bn-BD": "Bengali (Bangladesh)",
+  "locale.pa-PK": "Punjabi (Pakistan)",
+  "locale.mn-Mong-CN": "Mongolian (Mongolian)",
+  "locale.bo-BT": "Tibetan - Bhutan",
+  "locale.sd-PK": "Sindhi - Pakistan",
+  "locale.tzm-Latn-DZ": "Tamazight (Latin)",
+  "locale.ks-Deva-IN": "Kashmiri (Devanagari)",
+  "locale.ne-IN": "Nepali - India",
+  "locale.quz-EC": "Quecha - Ecuador",
+  "locale.ti-ET": "Tigrigna - Eritrea",
+  "locale.ar-EG": "Arabic - Egypt",
+  "locale.zh-HK": "Chinese - Hong Kong SAR",
+  "locale.de-AT": "German - Austria",
+  "locale.en-AU": "English - Australia",
+  "locale.es-ES": "Spanish - Spain (Modern Sort)",
+  "locale.fr-CA": "French - Canada",
+  "locale.sr-Cyrl-CS": "Serbian (Cyrillic)",
+  "locale.quz-PE": "Quecha - Peru",
+  "locale.ar-LY": "Arabic - Libya",
+  "locale.zh-SG": "Chinese - Singapore",
+  "locale.de-LU": "German - Luxembourg",
+  "locale.en-CA": "English - Canada",
+  "locale.es-GT": "Spanish - Guatemala",
+  "locale.fr-CH": "French - Switzerland",
+  "locale.hr-BA": "Croatian (Bosnia/Herzegovina)",
+  "locale.ar-DZ": "Arabic - Algeria",
+  "locale.zh-MO": "Chinese - Macao SAR",
+  "locale.de-LI": "German - Liechtenstein",
+  "locale.en-NZ": "English - New Zealand",
+  "locale.es-CR": "Spanish - Costa Rica",
+  "locale.fr-LU": "French - Luxembourg",
+  "locale.bs-Latn-BA": "Bosnian (Bosnia/Herzegovina)",
+  "locale.ar-MO": "Arabic - Morocco",
+  "locale.en-IE": "English - Ireland",
+  "locale.es-PA": "Spanish - Panama",
+  "locale.fr-MC": "French - Monaco",
+  "locale.ar-TN": "Arabic - Tunisia",
+  "locale.en-ZA": "English - South Africa",
+  "locale.es-DO": "Spanish - Dominican Republic",
+  "locale.fr-029": "French - West Indies",
+  "locale.ar-OM": "Arabic - Oman",
+  "locale.en-JM": "English - Jamaica",
+  "locale.es-VE": "Spanish - Venezuela",
+  "locale.fr-RE": "French - Reunion",
+  "locale.ar-YE": "Arabic - Yemen",
+  "locale.en-029": "English - Caribbean",
+  "locale.es-CO": "Spanish - Colombia",
+  "locale.fr-CG": "French - Democratic Rep. of Congo",
+  "locale.ar-SY": "Arabic - Syria",
+  "locale.en-BZ": "English - Belize",
+  "locale.es-PE": "Spanish - Peru",
+  "locale.fr-SN": "French - Senegal",
+  "locale.ar-JO": "Arabic - Jordan",
+  "locale.en-TT": "English - Trinidad",
+  "locale.es-AR": "Spanish - Argentina",
+  "locale.fr-CM": "French - Cameroon",
+  "locale.ar-LB": "Arabic - Lebanon",
+  "locale.en-ZW": "English - Zimbabwe",
+  "locale.es-EC": "Spanish - Ecuador",
+  "locale.fr-CI": "French - Cote d'Ivoire",
+  "locale.ar-KW": "Arabic - Kuwait",
+  "locale.en-PH": "English - Philippines",
+  "locale.es-CL": "Spanish - Chile",
+  "locale.fr-ML": "French - Mali",
+  "locale.ar-AE": "Arabic - U.A.E.",
+  "locale.en-ID": "English - Indonesia",
+  "locale.es-UY": "Spanish - Uruguay",
+  "locale.fr-MA": "French - Morocco",
+  "locale.ar-BH": "Arabic - Bahrain",
+  "locale.en-HK": "English - Hong Kong SAR",
+  "locale.es-PY": "Spanish - Paraguay",
+  "locale.fr-HT": "French - Haiti",
+  "locale.ar-QA": "Arabic - Qatar",
+  "locale.en-IN": "English - India",
+  "locale.es-BO": "Spanish - Bolivia",
+  "locale.en-MY": "English - Malaysia",
+  "locale.es-SV": "Spanish - El Salvador",
+  "locale.en-SG": "English - Singapore",
+  "locale.es-HN": "Spanish - Honduras",
+  "locale.es-NI": "Spanish - Nicaragua",
+  "locale.es-PR": "Spanish - Puerto Rico",
+  "locale.es-US": "Spanish - United States",
+  "locale.es-419": "Spanish - Latin America",
+  "locale.fr-015": "French - North Africa",
+
+  "locales.add_locale": "Add Locale",
+  "locales.are_you_sure": "Are you sure",
+  "locales.confirm_add": "Do you want to add {{locale}}?",
+  "locales.confirm_delete": "Do you want to delete {{locale}}?",
+  "locales.default": "Default Locale",
+  "locales.new_locale": "New Locale",
+  "locales.page_description": "You can view and edit supported locales in this page",
+  "locales.supported_locales": "Supported Locales",
+
   "pipeline.new_stage": "New Stage",
   "pipeline.page_description": "You can view and edit pipeline stages in this page",
   "pipeline.pipeline_stages": "Pipeline Stages",
@@ -98,6 +338,13 @@
   "profile.title": "User Profile",
   "profile.roles": "Roles",
   "profile.authorized_pipeline_stages": "Authorized Pipeline Stages",
+  "profile.authorized_actions": "Authorized Actions",
+  "profile.unauthorized_actions": "Unauthorized Actions",
+
+  "role.ADMIN": "Administrator",
+  "role.TRANSLATOR": "Translator",
+
+  "supported_locales.supported_locales": "Supported Locales",
 
   "table.table_definitions": "Table Definitions",
   "table.name": "Name",
